# test-repo-0001

./: .gitleaks.toml  README.md  eval.js  package-lock.json  package.json
.github/workflows/: boost.yml
.semgrep/: custom-rules.yml
canaries/: custom_application_key.irb  secrets.py
canaries/certs/: insecure.pfx
canaries/cicd/package-managers/: package.json  pyproject.toml
canaries/golang/: exec.go
canaries/helm/: .boostinclude
canaries/python/: flask-template.py  flask_path_traversal.py  run.sh  subprocess.py
canaries/ruby/: hardcoded-jwt.rb
src/: App.js
