[tool.poetry]
name = "sandbox"
version = "1.0.0"
description = "something bad will happen"
authors = []
packages = [{ include = "boostsec" }]
include = ["sandbox/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
cryptography = "^36.0.1"
PyGithub = {extras = ["integrations"], version = "^1.55"}
Jinja2 = "^3.0.3"
aioresponses = "^0.7.3"

[tool.poetry.extras]
testing = [
]

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
coverage = "^6.2"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-logging-format = "^0.6.0"
flake8-pytest-style = "^1.5.1"
types-PyYAML = "^6.0.4"
aioresponses = "^0.7.3"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

